--- a/Dolby WebXR/Assets/WebGLTemplates/WebXR/index.html
+++ b/Dolby WebXR/Assets/WebGLTemplates/WebXR/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- These tags are needed for enabling experimental Chrome APIs via Chrome's Origin-Trial program (Android, Windows): https://github.com/GoogleChrome/OriginTrials/blob/gh-pages/available-trials.md#current-experimental-features -->
@@ -15,80 +15,85 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" type="text/css" href="styles/webxr.css">
 
+    <script src="https://unpkg.com/@voxeet/voxeet-web-sdk@3.3.0/dist/voxeet-sdk.js"
+            type="text/javascript"></script>
+
     <script src="lib/telemetry.js"></script>
     <script>
-      MozillaResearch.telemetry.start({
-        analytics: true,
-        errorLogging: true,
-        performance: true
-      });
-      MozillaResearch.telemetry.performance.mark('LoaderParsingStart');
+        MozillaResearch.telemetry.start({
+            analytics: true,
+            errorLogging: true,
+            performance: true
+        });
+        MozillaResearch.telemetry.performance.mark('LoaderParsingStart');
     </script>
 
     <script src="%UNITY_WEBGL_LOADER_URL%"></script>
     <script>
         UnityLoader.SystemInfo.mobile = false;  // Workaround to force `UnityLoader` to actually load on mobile.
         window.gameInstance = UnityLoader.instantiate('gameContainer', '%UNITY_WEBGL_BUILD_URL%', {
-          Module: {
-            // `preserveDrawingBuffer` is needed for WebVR content to be mirrored to the `<canvas>`.
-            webglContextAttributes: {
-              preserveDrawingBuffer: true
-            }
-          },
-          onProgress: unityProgress
+            Module: {
+                // `preserveDrawingBuffer` is needed for WebVR content to be mirrored to the `<canvas>`.
+                webglContextAttributes: {
+                    preserveDrawingBuffer: true
+                }
+            },
+            onProgress: unityProgress
         });
 
-        function unityProgress (gameInstance, progress) {
-          if (!gameInstance.progress) {
-            gameInstance.loader = document.getElementById('loader');
-            gameInstance.progress = document.getElementById('progress');
-            gameInstance.loading = document.getElementById('loading');
-            document.dispatchEvent(new CustomEvent('UnityProgressStart'));
-          }
-          gameInstance.progress.style.width = (100 * progress) + '%';
-          if (progress === 1) {
-            document.dispatchEvent(new CustomEvent('UnityLoaded'));
-          }
+        function unityProgress(gameInstance, progress) {
+            if (!gameInstance.progress) {
+                gameInstance.loader = document.getElementById('loader');
+                gameInstance.progress = document.getElementById('progress');
+                gameInstance.loading = document.getElementById('loading');
+                document.dispatchEvent(new CustomEvent('UnityProgressStart'));
+            }
+            gameInstance.progress.style.width = (100 * progress) + '%';
+            if (progress === 1) {
+                document.dispatchEvent(new CustomEvent('UnityLoaded'));
+            }
         }
     </script>
-  </head>
+</head>
   <body>
-    <div id="loader">
-      <div id="loading" class="loading">Loading</div>
-      <div id="progress" class="progress"></div>
-    </div>
-
-    <div id="game">
-      <div id="gameContainer"></div>
-    </div>
-
-    <div id="instruction">
-      <div id="novr" class="panel center">
-        <h3>You&rsquo;ll need a <a href="https://developer.mozilla.com/topics/mixed-reality/">WebXR-enabled browser</a> and VR headset to fully enjoy this experience.</h3>
-        <p><img src="mousedrag.png" width="70" alt="Click-and-drag your mouse"></p>
-        <p>In the meantime, <strong><em>click and drag</em></strong> to have a look around!</p>
-        <p>
-          <button class="confirm">Continue</button>
-        </p>
+      <div id="loader">
+          <div id="loading" class="loading">Loading</div>
+          <div id="progress" class="progress"></div>
       </div>
 
-      <div id="nosecure" class="panel center">
-        <h3>You&rsquo;ll need a secure context (HTTPS or localhost) to execute WebXR applications.</h3>
-        <p><img src="mousedrag.png" width="70" alt="Click-and-drag your mouse"></p>
-        <p>In the meantime, <strong><em>click and drag</em></strong> to have a look around!</p>
-        <p>
-          <button class="confirm">Continue</button>
-        </p>
+      <div id="game">
+          <div id="gameContainer"></div>
       </div>
 
-    </div>
+      <div id="instruction">
+          <div id="novr" class="panel center">
+              <h3>You&rsquo;ll need a <a href="https://developer.mozilla.com/topics/mixed-reality/">WebXR-enabled browser</a> and VR headset to fully enjoy this experience.</h3>
+              <p><img src="mousedrag.png" width="70" alt="Click-and-drag your mouse"></p>
+              <p>In the meantime, <strong><em>click and drag</em></strong> to have a look around!</p>
+              <p>
+                  <button class="confirm">Continue</button>
+              </p>
+          </div>
 
-    <button id="enterxr" value="Enter VR"></button>
+          <div id="nosecure" class="panel center">
+              <h3>You&rsquo;ll need a secure context (HTTPS or localhost) to execute WebXR applications.</h3>
+              <p><img src="mousedrag.png" width="70" alt="Click-and-drag your mouse"></p>
+              <p>In the meantime, <strong><em>click and drag</em></strong> to have a look around!</p>
+              <p>
+                  <button class="confirm">Continue</button>
+              </p>
+          </div>
 
-    <div id="performance" data-enabled="false"></div>
+      </div>
 
-    <script src="vendor/gl-matrix-min.js"></script>
-    <script src="webxr.js"></script>
+      <button id="enterxr" value="Enter VR"></button>
+
+      <div id="performance" data-enabled="false"></div>
+
+      <script src="vendor/gl-matrix-min.js"></script>
+      <script src="webxr.js"></script>
+      <script src="ui.js"></script>
+      <script src="client.js"></script>
   </body>
 
 </html>
